| Summary: | ASTERISK-27491: res_pjsip_endpoint_identifier_ip only matches against header if match by ip fails | ||||
| Reporter: | George Joseph (gjoseph) | Labels: | pjsip | ||
| Date Opened: | 2017-12-19 07:54:09.000-0600 | Date Closed: | 2018-01-17 11:33:53.000-0600 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Resources/res_pjsip_endpoint_identifier_ip | ||
| Versions: | 13.18.4 15.1.4 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | The match_header capability added to res_pjsip_endpoint_identifier_ip has limited usefulness because the order is fixed. A check for match on ip address is done first, then headers are checked only if no match by ip address is found.
We should add a new constant "header" to the list of available identify_by values and update the res_pjsip_endpoint_identifier_ip to register itself twice, once for "ip" and once for "match_header". | ||||
| Comments: | By: Friendly Automation (friendly-automation) 2018-01-17 11:33:54.732-0600 Change 7934 merged by Jenkins2: res_pjsip: Split type=identify to IP address and SIP header matching priorities [https://gerrit.asterisk.org/7934|https://gerrit.asterisk.org/7934] By: Friendly Automation (friendly-automation) 2018-01-17 11:41:48.445-0600 Change 7935 merged by Jenkins2: res_pjsip: Split type=identify to IP address and SIP header matching priorities [https://gerrit.asterisk.org/7935|https://gerrit.asterisk.org/7935] By: Friendly Automation (friendly-automation) 2018-01-17 11:43:17.842-0600 Change 7936 merged by Jenkins2: res_pjsip: Split type=identify to IP address and SIP header matching priorities [https://gerrit.asterisk.org/7936|https://gerrit.asterisk.org/7936] | ||||